Add reflection and --add-opens